# ConvolutionBackward

./: CMakeLists.txt
python/: backward_filter.py
src/: backward_data.cpp  backward_data.h  backward_filter.cpp  backward_filter.h  col2im.cpp  col2im.h  common.h  gemm.cpp  gemm.h  im2col.cpp  im2col.h  main.cpp
src/cuda/: backward_data.cu  backward_filter.cu
test/: CMakeLists.txt  nv_test.cpp
